test/compile_fail/unbound_ident.pine
def main do
  unbound_ident # error: unbound identifier
end
